Symfony 5 wiring with Docker

--- a/.env
+++ b/.env
@@ -19,3 +19,11 @@ APP_SECRET=f640e44ad1c4e473da8b34682f2c24b9
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+###> Docker config ###
+COMPOSE_PROJECT_NAME=my_docker_symfony-5
+MYSQL_ROOT_PASSWORD=root
+MYSQL_USER=user
+MYSQL_PASSWORD=pass
+MYSQL_DATABASE=my_database
+###< Docker config ###
